--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-react",
-  "homepage": "https://sibisiddharth8.github.io/portfolio-react",
+ "homepage": "https://thejaswig.github.io/my-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
