--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "My Mind - Sibi's Portfolio",
-  "short_name": "Sibi's Portfolio",
+  "name": "TEJU",
+  "short_name": "Teju's Portfolio",
   "start_url": "/portfolio-react/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "id": "Sibi-Siddharth-S",
+  "id": "Teju",
   "lang": "en-US",
-  "description": "MyMind - Sibi Siddharth S Portfolio, showcasing Web, Machine Learning, Deep Learning and Python projects.",
+  "description": "Teju Portfolio, projects.",
   "icons": [
     {
       "src": "Icons/MyLogo-144x144.png",
